    based simulation using a matrix-based implementation. This new version
    should be faster than the signature-based BDD implementation in most
    cases. By default, the old one is used. This behavior can be changed by
    setting SPOT_SIMULATION_REDUCTION environment variable or using the
    "-x simul-method=..." option (see spot-x(7)).

  Python:

  - Bindings for functions related to games.
    See https://spot.lrde.epita.fr/ipynb/games.html for examples.

  - spot::twa::prop_set was previously abstent from the Python
    binding.  It is now available as spot.twa_prop_set (issue #453).

  Bugs fixed:

  - tgba_determinize() could create parity automata using more colors
    than necessary.  (Related to issue #298)

  - Some formulas using ->, <->, or xor were not properly detected as
    purely universal or pure eventualities.

  - autfilt --keep-states=... could incorrectly mention --mask-acc
    when diagnosing errors.

  Deprecation notices:

  - twa_graph::defrag_states() and digraph::defrag_states() now take
    the renaming vector by reference instead of rvalue reference.  The
    old prototype is still supported but will emit a deprecation
    warning.

New in spot 2.9.6 (2021-01-18)

  Build:

  - Build scripts are now compatible with Autoconf 2.70 (Issue #447)
    and require at least Autoconf 2.69 (released in 2012).

  - Debian builds use updated standards.

  Bugs fixed:

  - twa_graph::merge_edges() could fail to merge two transitions if the
    destination transition was the first of the automaton.  (Issue #441)

  - On non-deterministic automata, iterated_simulations() was
    performing an (unnecessary) second iteration even when the first
    one failed to reduce the automaton.  (Issue #442)

  - When passed an incomplete automaton as input, tgba_determinize()
    would sometimes produce a complete automaton but incorrectly mark
    it as incomplete.  (Related to issue #298)
